--- a/src/public/css/attendance/stamp.css
+++ b/src/public/css/attendance/stamp.css
@@ -17,7 +17,7 @@
 .status {
     width: 100px;
     height: 40px;
-    margin-top: 200px;
+    margin-top: 180px;
     margin-bottom: 20px;
     background-color: #c8c8c8;
     border-radius: 50px;
@@ -37,6 +37,7 @@
     font-size: 80px;
     font-weight: bold;
     margin: 20px auto;
+    margin-bottom: 40px;
 }
 
 .stamp-form {
@@ -66,6 +67,7 @@
     background-color: #000;
     color: #fff;
     border: none;
+    cursor: pointer;
 }
 
 .break-form-btn__submit {
@@ -77,6 +79,7 @@
     background-color: #fff;
     color: #000;
     border: none;
+    cursor: pointer;
 }
 
 .message {
