--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -49,6 +49,27 @@ html, body {
     width: 100%;
 }
 
+.content-header {
+    width: 900px;
+    margin: 0;
+}
+
+.content-title {
+    width: 100%;
+    margin: 0;
+    padding-top: 90px;
+    font-size: 30px;
+}
+
+.content-title span {
+    display: inline-block;
+    margin-right: 10px;
+    width: 40px;
+    height: 0;
+    border: 8px solid #000;
+    transform: rotate(90deg);
+}
+
 input {
     font-size: 22px;
     font-weight: bold;
